--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>flicker-sports-nexus</title>
-
-
-    <meta property="og:title" content="flicker-sports-nexus" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>Flicker Sports Industries - Leading Sports Equipment Manufacturer</title>
+    <meta name="description" content="Flicker Sports Industries offers high-quality sports equipment for cricket, football, hockey and more. Shop from India’s trusted sports manufacturer." />
+    <meta name="keywords" content="flicker sports, sports equipment, cricket, football, hockey, manufacturing, India, sports gear, sports goods" />
+  
+    <!-- Social Media Preview -->
+    <meta property="og:title" content="Flicker Sports Industries - Quality Sports Equipment" />
+    <meta property="og:description" content="Find the best sports gear and manufacturing expertise at Flicker Sports Industries." />
     <meta property="og:type" content="website" />
-
+    <meta property="og:url" content="https://flicker-sports-nexus-main.vercel.app/" />
+    <meta property="og:image" content="URL_TO_YOUR_SHARE_IMAGE.jpg" />
+  
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Flicker Sports Industries - Quality Sports Equipment" />
+    <meta name="twitter:description" content="Shop for premium sports equipment from India’s top manufacturer." />
+    <meta name="twitter:image" content="URL_TO_YOUR_SHARE_IMAGE.jpg" />
+  
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
+  
 
   <body>
     <div id="root"></div>
